feat(dashboard): add API key management UI with i18n
Following TDD workflow:
- RED: Write comprehensive controller tests (8 tests)
- GREEN: Implement Dashboard::ApiKeysController
- REFACTOR: Extract methods, add i18n for all microcopy

Implementation:
- Add Dashboard::ApiKeysController (index, create, destroy)
- Use memoized generation_result following functional style
- Ternary for success/failure paths
- Validate environment param before service call
- Multi-tenancy: scope all queries to current_account
- i18n: All copy in config/locales/en.yml
- Views: Minimal index and show_key templates
- Routes: namespace :dashboard with api_keys resource

Tests (8 passing):
- index requires login
- index shows only current account's keys
- create generates new API key
- create validates environment is required
- destroy revokes key
- destroy requires login
- cannot destroy other account's keys (404)

Design:
- Follows project guidelines (functional Ruby, thin controller)
- Only initialize/call pattern would apply to services (not controller)
- Clear separation: controller orchestrates, services execute
- Proper error handling with i18n messages

Multi-tenancy verified:
- All queries scoped via current_account.api_keys
- Test confirms 404 for cross-account access

All 199 tests passing

Closes #api-key-management

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -29,3 +29,46 @@
 
 en:
   hello: "Hello world"
+
+  dashboard:
+    api_keys:
+      index:
+        title: "API Keys"
+        subtitle: "Manage your API keys for accessing the Multibuzz API"
+        generate_button: "Generate New Key"
+        no_keys: "No API keys yet. Generate one to get started."
+        table:
+          prefix: "Key Prefix"
+          environment: "Environment"
+          description: "Description"
+          created: "Created"
+          last_used: "Last Used"
+          status: "Status"
+          actions: "Actions"
+        status:
+          active: "Active"
+          revoked: "Revoked"
+        actions:
+          revoke: "Revoke"
+          revoke_confirm: "Are you sure? This cannot be undone."
+      show_key:
+        title: "API Key Created"
+        subtitle: "Copy this key now - you won't see it again!"
+        warning: "Store this key securely. Anyone with this key can access your account."
+        key_label: "Your API Key"
+        done_button: "Done"
+      create:
+        success: "API key created successfully. Copy it now - you won't see it again!"
+        failure: "Failed to create API key"
+        missing_environment: "Environment is required"
+      destroy:
+        success: "API key revoked successfully"
+      form:
+        title: "Generate New API Key"
+        environment_label: "Environment"
+        environment_test: "Test"
+        environment_live: "Live"
+        name_label: "Description (optional)"
+        name_placeholder: "e.g., Production server"
+        submit: "Generate Key"
+        cancel: "Cancel"
