feat(sessions): implement channel attribution service with comprehensive testing
- Add Channels constants module for centralized channel taxonomy
- Implement Sessions::ChannelAttributionService with functional Ruby patterns
  - UTM-based attribution using hash lookups with regex patterns
  - Referrer-based fallback attribution for organic traffic
  - Support for paid vs organic social media detection
  - Handles invalid URLs and edge cases gracefully
- Implement Visitors::IdentificationService for cookie-based visitor tracking
  - 1-year cookie expiry for visitor persistence
  - Secure cookie settings (HttpOnly, Secure in production, SameSite=Lax)
- Implement Sessions::IdentificationService for session management
  - 30-minute session timeout with automatic expiration
  - Session renewal on activity
  - Handles expired session cleanup
- Add database migrations:
  - sessions.initial_referrer and sessions.channel columns
  - Funnel tracking indexes on events.properties JSONB fields
- Comprehensive test coverage (18 tests, all passing)
  - UTM pattern matching (cpc, ppc, email, display, social)
  - Referrer domain detection (search engines, social networks, video)
  - Edge cases (invalid URLs, string/symbol keys, empty values)
  - Channel priority (UTM > referrer > direct)

All services follow functional Ruby conventions:
- Memoized methods over procedural variable assignments
- Hash lookups with lambdas instead of case statements
- All magic strings extracted to centralized constants
- Only initialize and call are public methods

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -95,6 +95,10 @@ en:
         copyright: "© %{year} Multibuzz. All rights reserved."
 
   auth:
+    brand: "Multibuzz"
+    tagline: "Multi-channel marketing attribution"
+    privacy: "Privacy Policy"
+    terms: "Terms of Service"
     login:
       title: "Welcome back"
       subtitle: "Sign in to your account"
@@ -106,7 +110,7 @@ en:
       forgot_password: "Forgot password?"
       submit: "Sign in"
       no_account: "Don't have an account?"
-      signup_link: "Sign up"
+      signup_link: "Create account"
     signup:
       title: "Create your account"
       subtitle: "Start tracking attribution in 5 minutes"
