feat(waitlist): add complete waitlist signup flow with controller and views
Implements the frontend layer for the waitlist feature following test-driven development:

- Add WaitlistController with new, create, show actions
- Implement functional controller pattern with memoized submission method
- Capture IP address and user agent on form submission
- Add comprehensive controller tests (9 tests, 21 assertions)
- Create waitlist signup form view with email, role, framework fields
- Create thank you page with success confirmation
- Add all i18n strings for waitlist feature
- Update homepage CTAs to point to waitlist signup
- Update routes for waitlist resource (new, create, show)
- Update spec document to reflect completion

Technical approach:
- Follows project Ruby style guide (functional, no procedural)
- Uses memoization for submission object
- Ternary pattern for success/failure flow
- All microcopy externalized to i18n
- Inline validation error display
- Consistent styling with existing auth pages

All tests passing: 325 tests, 1852 assertions

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -126,6 +126,38 @@ en:
       have_account: "Already have an account?"
       login_link: "Sign in"
 
+  waitlist:
+    new:
+      brand: "mbuzz"
+      tagline: "Multi-touch marketing attribution"
+      title: "Join the Waitlist"
+      subtitle: "Be the first to know when we launch"
+      email_label: "Email"
+      email_placeholder: "you@company.com"
+      role_label: "What's your role?"
+      roles:
+        developer: "Developer"
+        founder: "Founder"
+        product_manager: "Product Manager"
+        other: "Other"
+      framework_label: "What framework do you use?"
+      frameworks:
+        rails: "Ruby on Rails"
+        django: "Django"
+        laravel: "Laravel"
+        other: "Other"
+      framework_other_label: "Please specify"
+      framework_other_placeholder: "e.g., Express.js, FastAPI"
+      submit: "Join Waitlist"
+      back_home: "← Back to home"
+    create:
+      success: "Thanks for joining the waitlist! We'll be in touch soon."
+    show:
+      title: "You're on the list!"
+      subtitle: "Thanks for joining the waitlist"
+      message: "We'll reach out to you at %{email} as soon as we're ready to launch."
+      back_home: "Back to home"
+
   dashboard:
     api_keys:
       index:
