feat(nav): add Start Free CTA and mobile hamburger menu
- Add generic reusable toggle_controller.js for show/hide functionality
- Update navigation with "Start Free" CTA button linking to waitlist
- Implement responsive mobile navigation with hamburger menu
- Desktop: Features, Docs, Login, Start Free (all visible)
- Mobile: Login and Start Free always visible, hamburger for Features/Docs
- Use toggle controller to show/hide mobile menu
- Add i18n string for nav CTA
- Maintain consistent styling across breakpoints

All tests passing: 325 tests, 1852 assertions

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -37,6 +37,7 @@ en:
         features: "Features"
         docs: "Docs"
         login: "Login"
+        cta: "Start Free"
       hero:
         title: "Multi-touch marketing attribution"
         subtitle: "Track every touchpoint across Google, Facebook, LinkedIn, email, and more. See which channels drive conversions, not just clicks."
